--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       }).filter(Boolean);
 
       if (purgePromises.length === 0 && skippedCount === 0) {
-        alert('没有可刷新的缓存（仅支持 jsdelivr.net 链接）');
+        alert('没有可刷新的缓存');
         return;
       }
 
