--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       • GitHub raw 或 blob 链接 → 转 jsDelivr 全球加速（大陆推荐）<br>
       • 适用于仓库中的任何静态文件（如 JS、CSS、图像等）<br>
       • 支持每行一个链接，批量转换（回车键换行，点击按钮转换，结果按输入顺序排列）<br>
-      • 支持批量清除fastly.jsdelivr.net、cdn.jsdmirror.com、cdn.jsdelivr.net 三个类型链接的缓存<br>
+      • 支持批量清除fastly.jsdelivr.net、cdn.jsdelivr.net 两个类型链接的缓存<br>
       • <a href="https://www.jsdelivr.com/tools/purge" target="_blank" style="color: var(--primary); text-decoration: underline;">使用 jsDelivr 清除工具手动清除缓存</a>
     </p>
     <div id="resultGroup" style="display:none;"></div>
