--- a/index.html
+++ b/index.html
@@ -317,22 +317,7 @@
       opacity: 0.85;
       text-align: center;
       line-height: 1.6;
-    }
-    #input::-webkit-input-placeholder {
-      height: 140px;
-      line-height: 140px;
-    }
-    #input:-moz-placeholder {
-      height: 140px;
-      line-height: 140px;
-    }
-    #input::-moz-placeholder {
-      height: 140px;
-      line-height: 140px;
-    }
-    #input:-ms-input-placeholder {
-      height: 140px;
-      line-height: 140px;
+      padding-top: calc((140px - 32px - 76.8px) / 2);
     }
     .tip {
       font-size: 0.9rem; color: var(--text-light); padding: 14px 20px;
