--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
         if (parts.length < 4) return null;
         const [user, repo, ref, ...filePath] = parts;
         const base = `${user}/${repo}@${ref}/${filePath.join('/')}`;
-        return [
+        const fileName = filePath[filePath.length - 1]; // 提取文件名
+        const results = [
           { label: '✅ fastly.jsdelivr.net', url: `https://fastly.jsdelivr.net/gh/${base}`, hint: '海外优选，国际线路更快' },
           { label: '🇨🇳 cdn.jsdmirror.com', url: `https://cdn.jsdmirror.com/gh/${base}`, hint: '国内镜像，速度更快（无公共 purge API，自动同步）' },
           { label: '🌐 cdn.jsdelivr.net', url: `https://cdn.jsdelivr.net/gh/${base}`, hint: '中国大陆推荐，自动选择最优节点' },
-          { label: '☁️ Cloudflare', url: `https://stash-rules.pages.dev/gh/${base}`, hint: 'Cloudflare 加速' }
+          { label: '☁️ Cloudflare', url: `https://stash-rules.pages.dev/${fileName}`, hint: 'Cloudflare 加速（仅作者自己可用）' }
         ];
+        return results;
       } catch {
         return null;
       }
